# u4u-engine

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  U4U_Cybersecurity_Execution_Plan.docx  api.py  docker-compose.yml  dossier.html  dossier_notes.md  dossier_report.html  genome_Noah_Jones_v5_Full_20230322090041.head200.txt  peptides.csv  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: annotator.yml  bug.yml
.github/workflows/: build-and-push-frontend.yml  build-and-push.yml  test.yml
data/: acmg81_rsids.txt  condition_library_for_sasank.xlsx  peptidiq_engine_schema.json
db/: schema.sql
db/migrations/: 003_peptide_condition_library.sql
db/models/: peptide_models.py
db/seeds/: peptide_seed_data.sql
docs/: architecture.md  data-sources.md  engine-spec.md  frontend.md  interpretation-spec.md  interpretation.md  narrative.md  outreach-strategy.html  peptidiq-v3-file-map.md  product-spec.md  project-status.md  system-diagram.html  team.md
engine/: __init__.py  deduplicator.py  filters.py  parsers.py  pipeline.py  pyproject.toml  quality_filter.py  rsid_resolver.py  scoring.py  summary.py  tenacity.py  validators.py
engine/annotators/: __init__.py  bpc157_predictor.py  clinvar.py  gnomad.py  kegg_mapper.py  myvariant.py  peptide_mapper.py  prs_calculator.py  receptor_mapper.py  vep.py
engine/repeat_callers/: __init__.py  expansion_hunter.py
frontend/: Dockerfile  README.md
scripts/: generate_filters.py
tests/test_engine/: test_annotators.py  test_bpc157_predictor.py  (+10 more)
(+14 files in other folders)
