[project]
name = "u4u-engine"
version = "1.0.0"
description = "U4U genomics variant analysis engine — framework-free, wrappable by any worker"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31",
    "tenacity>=8.2",
]

[project.optional-dependencies]
vcf = [
    "pysam>=0.22",      # VCF parsing — Linux/Mac only
]
dev = [
    "pytest>=7.0",
    "responses>=0.23",  # HTTP mocking in tests
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["engine*"]
